k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sovereign-engine-svc
spec:
  selector:
    app: sovereign
  ports:
    - port: 8001
      targetPort: 8001
  type: ClusterIP
