k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: register-app
  namespace: seagate-mimic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: register-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: register-app
                port:
                  number: 80
